tests/ui/deprecation/unit_and_tuple_struct.stderr
error: use of deprecated struct `a::Foo`
  --> $DIR/unit_and_tuple_struct.rs:12:8
   |
LL | use a::Foo;
   |        ^^^
   |
note: the lint level is defined here
  --> $DIR/unit_and_tuple_struct.rs:1:9
   |
LL | #![deny(deprecated)]
   |         ^^^^^^^^^^

error: use of deprecated struct `a::Bar`
  --> $DIR/unit_and_tuple_struct.rs:14:8
   |
LL | use a::Bar;
   |        ^^^

error: use of deprecated struct `a::Baz`
  --> $DIR/unit_and_tuple_struct.rs:16:8
   |
LL | use a::Baz;
   |        ^^^

error: use of deprecated unit struct `a::Foo`
  --> $DIR/unit_and_tuple_struct.rs:20:6
   |
LL |   a::Foo;
   |      ^^^

error: use of deprecated tuple struct `a::Bar`
  --> $DIR/unit_and_tuple_struct.rs:22:6
   |
LL |   a::Bar();
   |      ^^^

error: use of deprecated struct `a::Baz`
  --> $DIR/unit_and_tuple_struct.rs:24:6
   |
LL |   a::Baz {};
   |      ^^^

error: aborting due to 6 previous errors

